# terafab-decision-twin

./: .gitignore  ACADEMIC_LICENSE.md  ADVANCED_UPDATE_QA_REPORT.md  AGENTS.md  CHANGELOG.md  CITATION.cff  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  DEPLOY_GITHUB_PAGES_BROWSER_ONLY.md  FINAL_PUBLIC_RELEASE_REPORT.md  FINAL_RESTRICTED_SOURCE_SCAN.json  LICENSE-ACADEMIC.md  LICENSE-COMMERCIAL.md  LICENSE.md  MANIFEST.in  Makefile  NOTICE.md  PUBLIC_RELEASE_FINAL_PASS_REPORT.md  PUBLIC_RELEASE_UPGRADE_REPORT.md  QA_REPORT.md  README.md  README_SITE_PACKAGE.md  SITE_BUILD_REPORT.md  SITE_QA_CHECKLIST.md  UPDATE_PACKAGE_MANIFEST.md  pyproject.toml  terafab_ecm_publication_analysis_colab.ipynb
docs/: 404.html  ADVANCED_SIMULATION.md  ARCHITECTURE.md  BUILD_ACCEPTANCE.md  CLI.md  COLAB_DASHBOARD.md  EQUATIONS.md  EVIDENCE_POLICY.md  INFOGRAPHIC_REQUIREMENTS.md  OUTPUT_REGISTRY.md  RELEASE_CHECKLIST.md  REPORTING.md  STAKEHOLDER_DECISION_SURFACES.md  TRACEABILITY.md  VALIDATION_LAB.md  evidence.html  examples.html  getting-started.html  index.html  index.md  llms.txt  manifest.webmanifest  model.html  offline.html  policy.html  researchers.html  robots.txt  scenarios.html  service-worker.js  sitemap.xml
examples/: README.md  evidence_intake_template.json  public_monitoring_checklist.md  scenario_public_infrastructure_watch.json  scenario_public_progress_watch.json  source_register_template.json  stakeholder_board_monitoring.md  stakeholder_engineering_monitoring.md  stakeholder_investor_monitoring.md  stakeholder_policy_monitoring.md
notebooks/: terafab_advanced_simulation_lab.ipynb  terafab_colab_dashboard.ipynb  terafab_comparative_scenarios_notebook.ipynb  terafab_comparative_simulation_reporting_colab.ipynb  terafab_decision_twin_colab_lab.ipynb
scenarios/: baseline_2026.json  (+4 more)
(+80 files in other folders)
